@@ -129,6 +129,7 @@ Pod::Simple = 3.31 ; Fixes "Use of uninitialized value $1 in lc" warning in Pod:
 Moo = 2.000001
 Type::Tiny = 0
 YAML = 0
+JSON::PP = 0
 Import::Base = 0.012
 Text::Markdown = 0
 Mojolicious = 6.54
