@@ -1,0 +1,2 @@
+{ "title": "JSON Document", "author": "preaction" }
+No optional things in here, at all!
