@@ -1,0 +1,5 @@
+{
+    this is some bad
+    JSON: WHATEVER
+}
+This is not bad markdown, but we should find a way to make some...
