@@ -8,6 +8,12 @@ Changelog for Statocles
       parsed HTML for the multiple transformations that must be
       performed. Hopefully this will speed up performance a little bit.
 
+    - Added JSON frontmatter support. Now if the first character of
+      a document is a `{`, the frontmatter will be treated as JSON. JSON
+      can be a single line (the `}` end bracket must be at the end of
+      the line) or multiple lines (the `}` end bracket must be on a line
+      by itself).
+
 0.084     2017-08-09 12:00:17-05:00 America/Chicago
 
     [Added]
